@@ -256,6 +256,7 @@
                             </includes>
                             <argLine>
                                 --enable-preview
+                                --add-modules jdk.incubator.vector
                                 --enable-native-access=ALL-UNNAMED
                                 --add-opens java.base/java.lang=ALL-UNNAMED
                                 --add-opens java.base/java.util=ALL-UNNAMED
